@@ -9,9 +9,10 @@
 {% block content %}
 
 <ul>
+<li>Games: <a href="/admin/list-games">list-games</a></li>
+<li>Developers: <a href="/admin/list-devs">list-devs</a></li>
+<li>Developers with Updates: <a href="/admin/list-devs-updates">list-devs-updates</a></li>
 <li>Default values: <a href="/admin/default-values">default-values</a></li>
-<li>Devs and Games: <a href="/admin/list-devs">list-devs</a></li>
-<li>Devs with Updates: <a href="/admin/list-devs-updates">list-devs-updates</a></li>
 </ul>
 
 {% endblock %}
